--- a/index.html
+++ b/index.html
@@ -81,6 +81,20 @@
   </style>
 </head>
 <body>
-<!-- Truncated for brevity -->
+  <header>
+    <div style="background: url('banner.png') center/cover no-repeat; height: 200px; border-radius: 8px; margin-bottom: 1rem;"></div>
+    <img src="logo.png" alt="Serrano Collective Logo" style="max-width: 160px; margin-bottom: 1rem;">
+    <h1>Serrano Collective</h1>
+    <p>Wholesale Solutions. Strategic Distribution. Trusted Partnerships.</p>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#partners">Who We Work With</a>
+      <a href="#values">Our Values</a>
+      <a href="#contact">Contact</a>
+      <a href="#privacy">Privacy</a>
+      <a href="#terms">Terms</a>
+    </nav>
+  </header>
+  <!-- More content follows... -->
 </body>
 </html>
